fixing slider on mobile

--- a/style.css
+++ b/style.css
@@ -80,6 +80,11 @@
   }
   .large-header.large-header-has-slider img { width: 100%; }
 
+  @media (max-width: 991px) {
+    .large-header.large-header-has-slider .sy-box {
+      height: auto !important;
+    }
+  }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 	~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~OCTANE CUSTOM CSS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
